Finish Add Intent Explicit.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Belajar Intent</string>
     <string name="belajar_intent_bareng_ikik">Belajar Intent Bareng Ikik</string>
     <string name="intent_explicit">Intent Explicit</string>
+    <string name="ini_adalah_second_activity">Ini adalah Second Activity</string>
 </resources>
